商品一覧表示機能の実装

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -127,12 +127,12 @@
       新規投稿商品
     </div>
     <ul class='item-lists'>
-      <% #@items.each do |item| %>
+      <% @items.each do |item| %>
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
         <li class='list'>
-          <%= link_to new_item_path do %>
+          <%= link_to "#" do %>
             <div class='item-img-content'>
-              <%= image_tag "item-sample.png", class: "item-img" %>
+              <%= image_tag item.image, class: "item-img" %>
               <%# 商品が売れていればsold outを表示しましょう %>
                 <div class='sold-out'>
                   <span>Sold Out!!</span>
@@ -141,10 +141,17 @@
             </div>
             <div class='item-info'>
               <h3 class='item-name'>
-                <%= "商品名" %>
+                <%= item.item_name %>
               </h3>
               <div class='item-price'>
-                <span><%= "販売価格" %>円<br><%= '配送料負担' %></span>
+                <span><%= item.price %>円<br>
+                  <%# postage_idが2なら着払い(購入者負担)、postage_idが3なら送料込み(出品者負担)と表示 %>
+                  <% if item.postage_id == 2 %>
+                    着払い(購入者負担)
+                  <% elsif item.postage_id == 3 %>
+                    送料込み(出品者負担)
+                  <% end %>
+                </span>
                 <div class='star-btn'>
                   <%= image_tag "star.png", class:"star-icon" %>
                   <span class='star-count'>0</span>
@@ -153,11 +160,25 @@
             </div>
           <% end %>
         </li>
-      <% #end %>
+      <% end %>
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
 
       <%# 商品がない場合は以下のダミー商品が表示されるようにしましょう %>
       <%# 商品がある場合は表示されないようにしましょう %>
+      <% if @items.any? %>
+    <%# 商品がある場合の表示 %>
+    <ul class='item-lists'>
+      <% @items.each do |item| %>
+        <li class='list'>
+          <%= link_to "#" do %>
+            <!-- 商品の表示内容 -->
+          <% end %>
+        </li>
+      <% end %>
+    </ul>
+  <% else %>
+    <%# 商品がない場合の表示（ダミー商品） %>
+    <ul class='item-lists'>
       <li class='list'>
         <%= link_to '#' do %>
         <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
@@ -179,6 +200,7 @@
       <%# //商品がない場合は以下のダミー商品が表示されるようにしましょう %>
     </ul>
   </div>
+  <% end %>
   <%# /商品一覧 %>
 </div>
 <%= link_to(new_item_path, class: 'purchase-btn') do %>
