--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -128,7 +128,6 @@
     </div>
     <ul class='item-lists'>
       <% @items.each do |item| %>
-      <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
         <li class='list'>
           <%= link_to "#" do %>
             <div class='item-img-content'>
@@ -146,10 +145,8 @@
               <div class='item-price'>
                 <span><%= item.price %>円<br>
                   <%# postage_idが2なら着払い(購入者負担)、postage_idが3なら送料込み(出品者負担)と表示 %>
-                  <% if item.postage_id == 2 %>
-                    着払い(購入者負担)
-                  <% elsif item.postage_id == 3 %>
-                    送料込み(出品者負担)
+                  <% if item.postage_id.present? %>
+                    <%= Postage.find(item.postage_id).name %>
                   <% end %>
                 </span>
                 <div class='star-btn'>
@@ -161,11 +158,8 @@
           <% end %>
         </li>
       <% end %>
-      <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
 
-      <%# 商品がない場合は以下のダミー商品が表示されるようにしましょう %>
-      <%# 商品がある場合は表示されないようにしましょう %>
-      <% if @items.any? %>
+  <% if @items.any? %>
     <%# 商品がある場合の表示 %>
     <ul class='item-lists'>
       <% @items.each do |item| %>
@@ -196,8 +190,6 @@
         </div>
         <% end %>
       </li>
-      <%# //商品がある場合は表示されないようにしましょう %>
-      <%# //商品がない場合は以下のダミー商品が表示されるようにしましょう %>
     </ul>
   </div>
   <% end %>
